--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
-    <title>Static Template</title>
+    <title>Flex Experiment</title>
   </head>
   <body>
     <div class="container">
       <div class="block" id="blk1">
-        <p>1</p>
+        <div class="inner-block"><p>1</p></div>
       </div>
       <div class="block" id="blk2">
-        <p>2</p>
+        <div class="inner-block"><p>2</p></div>
       </div>
       <div class="block" id="blk3">
-        <p>3</p>
+        <div class="inner-block"><p>3</p></div>
       </div>
       <div class="block" id="blk4">
-        <p>4</p>
+        <div class="inner-block"><p>4</p></div>
       </div>
     </div>
   </body>
