Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <body>
     <div class="container">
       <div class="block" id="blk1">
-        <div class="inner-block"><p>1</p></div>
+        <div class="inner-block"></div>
       </div>
       <div class="block" id="blk2">
-        <div class="inner-block"><p>2</p></div>
+        <div class="inner-block"></div>
       </div>
       <div class="block" id="blk3">
-        <div class="inner-block"><p>3</p></div>
+        <div class="inner-block"></div>
       </div>
       <div class="block" id="blk4">
-        <div class="inner-block"><p>4</p></div>
+        <div class="inner-block"></div>
       </div>
     </div>
   </body>
