Update image layout

--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
   </head>
   <body>
     <div class="container">
-      <div class="block" id="blk1">
-        <div class="inner-block"></div>
+      <div class="block">
+        <div class="inner-block">
+          <img src="../asset/images/city.jpeg" alt="nyc">
+        </div>
       </div>
-      <div class="block" id="blk2">
-        <div class="inner-block"></div>
+      <div class="block">
+        <div class="inner-block">
+          <img src="../asset/images/nyc-2.jpeg" alt="nyc">
+        </div>
       </div>
-      <div class="block" id="blk3">
-        <div class="inner-block"></div>
+      <div class="block">
+        <div class="inner-block">
+          <img src="../asset/images/nyc-night.jpeg" alt="nyc">
+        </div>
       </div>
-      <div class="block" id="blk4">
-        <div class="inner-block"></div>
+      <div class="block">
+        <div class="inner-block">
+          <img src="../asset/images/city-cars.jpeg" alt="nyc">
+        </div>
       </div>
     </div>
   </body>
