--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <link rel="icon" sizes="32x32" type="image/png" href="./asset/images/icons-32.png" />
     <title>Flex Experiment</title>
   </head>
   <body>
